<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Agendakeun</string>
    <string name="title_event">Event</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iv_cd_gtc_ava">Avatar</string>
    <string name="welcome_message">Selamat datang!</string>
    <string name="loading" tools:ignore="TypographyEllipsis">Loading...</string>
    <string name="not_available">Tidak tersedia, silakan buat baru!</string>
    <string name="et_gch_hint">Cari atau buat kelompok baru!</string>
    <string name="btn_gch_text">Buat Kelompok Baru</string>
    <string name="et_gct_name_hint">Nama Kelompok</string>
    <string name="et_gct_group_hint">Cari pengguna…</string>
    <string name="tv_gct_daftar">Daftar Anggota:</string>
    <string name="btn_save">Simpan</string>
    <string name="btn_delete">Delete</string>
    <string name="tv_event_not_available">Tidak ada agenda.</string>
    <string name="btn_add_info">Tambahkan?</string>
    <string name="welcome_message_info">Nice to see you!</string>
    <string name="btn_sign_in_info">Sign In</string>
    <string name="welcome_hint">Masuk menggunakan Akun Google untuk melanjutkan!</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="csi_et_hint_pos">Jabatan di Organisasi</string>
    <string name="csi_et_hint_org_code">Kode Organisasi</string>
    <string name="csi_et_hint_name">Nama Panggilan</string>
    <string name="et_csi_hint_email">Email</string>
    <string name="tv_csi_info">Lengkapi profil Anda!</string>
    <string name="info_tambahan">Info Tambahan (opsional)</string>
    <string name="event_tempat">Tempat</string>
    <string name="event_waktu">Waktu</string>
    <string name="event_tanggal">Tanggal</string>
    <string name="event_nama_agenda">Nama Agenda</string>
    <string name="event_kelompok_terkait">Kelompok Terkait</string>
    <string name="kelompok_terkait">Kelompok Terkait :</string>
    <string name="nama_agenda">Nama Agenda :</string>
    <string name="tanggal">Tanggal :</string>
    <string name="waktu">Waktu :</string>
    <string name="tempat">Tempat :</string>
    <string name="info_tambahan_tv">Info Tambahan :</string>
    <string name="switch_info"><big>Notifikasi</big>\nDapatkan notifikasi 1 jam sebelumnya dan saat sedang berlangsung.</string>
    <string name="menu_past_event">Lihat semua agenda</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="btn_manage_group">Kelola Kelompok</string>
    <string name="creator">Event created by %s</string>
    <string name="group_creator_count">%d Terpilih (Termasuk Anda)</string>
    <string name="group_manage_count">%d Anggota</string>
    <string name="group_creator_name">Pembuat: %s</string>
    <string name="menu_edit">Edit</string>
    <string name="fab_cd">fab</string>
    <string name="upcoming_event_info">Upcoming Event:</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps">Google Maps (Opsional)</string>
    <string name="add_member">Add member</string>
    <string name="remove_member">Remove member</string>
</resources>
