<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.airmineral.agendakeun.ui.event.create.CreateEventViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            tools:context=".ui.event.create.CreateEventFragment">

            <TextView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/seguisb"
                android:labelFor="@id/new_event_group_name"
                android:text="@string/event_kelompok_terkait"
                android:textColor="@android:color/black"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/new_event_group_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/et_rounded"
                android:backgroundTint="@color/colorPrimaryVeryLight"
                android:focusable="false"
                android:fontFamily="@font/seguisb"
                android:importantForAutofill="no"
                android:inputType="none"
                android:paddingStart="28dp"
                android:paddingEnd="20dp"
                android:text="@={viewModel.groupData.name}"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info" />

            <EditText
                android:id="@+id/new_event_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/et_rounded"
                android:fontFamily="@font/seguisb"
                android:hint="@string/event_nama_agenda"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                android:paddingStart="28dp"
                android:paddingEnd="20dp"
                android:text="@={viewModel.eventName}"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/new_event_group_name" />


            <EditText
                android:id="@+id/new_event_date"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/et_rounded"
                android:focusable="false"
                android:fontFamily="@font/seguisb"
                android:hint="@string/event_tanggal"
                android:importantForAutofill="no"
                android:inputType="date"
                android:paddingStart="28dp"
                android:paddingEnd="20dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/new_event_name" />

            <EditText
                android:id="@+id/new_event_time"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/et_rounded"
                android:focusable="false"
                android:fontFamily="@font/seguisb"
                android:hint="@string/event_waktu"
                android:importantForAutofill="no"
                android:inputType="time"
                android:paddingStart="28dp"
                android:paddingEnd="20dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/new_event_date" />

            <EditText
                android:id="@+id/new_event_place"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/et_rounded"
                android:fontFamily="@font/seguisb"
                android:hint="@string/event_tempat"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                android:paddingStart="28dp"
                android:paddingEnd="20dp"
                android:text="@={viewModel.eventPlace}"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/new_event_time" />

            <EditText
                android:id="@+id/new_event_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/et_rounded"
                android:fontFamily="@font/seguisb"
                android:hint="@string/info_tambahan"
                android:importantForAutofill="no"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLines="5"
                android:paddingVertical="16dp"
                android:paddingStart="28dp"
                android:paddingEnd="20dp"
                android:text="@={viewModel.eventDesc}"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/new_event_place" />

            <Button
                android:id="@+id/new_event_save"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:background="@drawable/btn_style"
                android:fontFamily="@font/seguisb"
                android:onClick="@{viewModel::onSaveEventBtnClick}"
                android:text="@string/btn_save"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/new_event_desc" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>