<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.airmineral.agendakeun.ui.profile.GroupEditorViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.event.create.GroupCreatorFragment">

            <EditText
                android:id="@+id/et_gedit_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:background="@drawable/et_rounded"
                android:backgroundTint="@color/colorPrimaryVeryLight"
                android:focusable="false"
                android:fontFamily="@font/seguisb"
                android:hint="@string/et_gct_name_hint"
                android:importantForAutofill="no"
                android:inputType="none"
                android:paddingStart="25dp"
                android:paddingEnd="20dp"
                android:text="@={viewModel.groupData.name}"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/remove_member"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_gedit_name" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_gedit_remove"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="6dp"
                android:clipToPadding="false"
                android:paddingBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv1"
                tools:listitem="@layout/item_group_creator_delete" />

            <TextView
                android:id="@+id/tv_gedit_loading_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/seguisb"
                android:text="@string/loading"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/rv_gedit_remove"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/rv_gedit_remove" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/add_member"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_gedit_remove" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_gedit_add"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="6dp"
                android:clipToPadding="false"
                android:paddingBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv2"
                tools:listitem="@layout/item_group_creator" />

            <TextView
                android:id="@+id/tv_gedit_loading_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/seguisb"
                android:text="@string/loading"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/rv_gedit_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/rv_gedit_add" />

            <Button
                android:id="@+id/btn_gedit_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:background="@drawable/btn_style_red"
                android:fontFamily="@font/seguisb"
                android:onClick="@{viewModel::onDeleteGroupBtnClick}"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/btn_delete"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                app:layout_constraintEnd_toStartOf="@id/btn_gedit_confirm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_gedit_add" />

            <Button
                android:id="@+id/btn_gedit_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_style"
                android:fontFamily="@font/seguisb"
                android:onClick="@{viewModel::onSaveGroupBtnClick}"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/btn_save"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_gedit_delete"
                app:layout_constraintTop_toBottomOf="@id/rv_gedit_add" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>